No estoy seguro que estoy haciendo, mi primer commit

--- a/index.html
+++ b/index.html
@@ -10,14 +10,28 @@
 
   <body>
     <div class="nav-bar">
-      <button>Acceder</button>
 
-      <a href="https://www.google.com.mx/imghp">Imágenes</a>
+      <button>Iniciar sesión</button>
 
-      <a href="https://mail.google.com/mail/">Gmail</a>
+      <div class="invento">
+        <div class="circulo 1"> </div>
+        <div class="circulo 2"> </div>
+        <div class="circulo 3"> </div>
+        <div class="circulo 4"> </div>
+        <div class="circulo 5"> </div>
+        <div class="circulo 6"> </div>
+        <div class="circulo 7"> </div>
+        <div class="circulo 8"> </div>
+        <div class="circulo 9"> </div>
+      </div>
+
+      <a href="https://www.google.com.mx/imghp" class="nava">Imágenes</a>
+
+      <a href="https://mail.google.com/mail/" class="nava">Gmail</a>
     </div>
 
     <div class="content">
+      
       <img
         class="logo"
         src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
@@ -25,15 +39,15 @@
         width="272"
       />
 
-      <input />
+      <input class="buscador"/>
 
       <div class="row">
-        <button>Buscar con Google</button>
+        <button>Google Search</button>
 
-        <button>Me siento con suerte</button>
+        <button>I´m Feeling Lucky</button>
       </div>
 
-      <div>
+      <div class="ofrecido">
         Ofrecido por google en:
 
         <a href="https://www.google.com/setprefs?sig=0_KPNkEfiG_aV_JEvdFPPPG8zQB4U%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwjy9JqT_f32AhWGKUQIHc5xAbEQ2ZgBCA4">English</a>
