--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <button>I´m Feeling Lucky</button>
       </div>
 
-      <div class="ofrecido">
+      <div class="ofreciod">
         Ofrecido por google en:
 
         <a href="https://www.google.com/setprefs?sig=0_KPNkEfiG_aV_JEvdFPPPG8zQB4U%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwjy9JqT_f32AhWGKUQIHc5xAbEQ2ZgBCA4">English</a>
