--- a/index.html
+++ b/index.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
 
-    <title>Google</title>
+<head>
+  <meta charset="utf-8" />
 
-    <link rel="stylesheet" href="style.css">
-  </head>
+  <title>Google</title>
 
-  <body>
-    <div class="nav-bar">
-      <button>Acceder</button>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-      <a href="https://www.google.com.mx/imghp">Imágenes</a>
+<body>
+  <div class="nav-bar">
+    <a aria-label="Cuenta de Google: Víctor Alejandro" role="button" tabindex="0" aria-expanded="false"><img
+        class="gb_Aa gbii"
+        src="https://lh3.googleusercontent.com/ogw/ADea4I5ZGEtXqrDlt_6WXqdo8738VEyAoKSB-IV65ecD9w=s32-c-mo"></a>
 
-      <a href="https://mail.google.com/mail/">Gmail</a>
+    <a href="https://www.google.com.mx/imghp">Imágenes</a>
+
+    <a href="https://mail.google.com/mail/">Gmail</a>
+
+  </div>
+
+  <div class="content">
+    <img class="logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+      height="92" width="272" />
+
+    <input class="search"/>
+
+    <div class="row">
+      <button>Buscar con Google</button>
+
+      <button>Me siento con suerte</button>
     </div>
 
-    <div class="content">
-      <img
-        class="logo"
-        src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
-        height="92"
-        width="272"
-      />
+    <div>
+      Ofrecido por google en:
 
-      <input />
-
-      <div class="row">
-        <button>Buscar con Google</button>
-
-        <button>Me siento con suerte</button>
-      </div>
-
-      <div>
-        Ofrecido por google en:
-
-        <a href="https://www.google.com/setprefs?sig=0_KPNkEfiG_aV_JEvdFPPPG8zQB4U%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwjy9JqT_f32AhWGKUQIHc5xAbEQ2ZgBCA4">English</a>
-      </div>
+      <a
+        href="https://www.google.com/setprefs?sig=0_KPNkEfiG_aV_JEvdFPPPG8zQB4U%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwjy9JqT_f32AhWGKUQIHc5xAbEQ2ZgBCA4">English</a>
     </div>
-  </body>
+  </div>
+</body>
+<footer class="foo">
+  <div>
+    <div>
+      <a href="https://about.google/?utm_source=google-GT&amp;utm_medium=referral&amp;utm_campaign=hp-footer&amp;fg=1">Sobre
+        Google</a>
+      <a
+        href="https://www.google.com/intl/es-419_gt/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpafooter&amp;fg=1">Publicidad</a>
+      <a
+        href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpbfooter&amp;fg=1">Negocios</a>
+      <a href="https://google.com/search/howsearchworks/?fg=1"> Cómo funciona la Búsqueda </a>
+    </div>
+  </div>
+</footer>
+
 </html>
