Add my google version EM

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
   <body>
     <div class="nav-bar">
-      <button>Acceder</button>
+      <button>Iniciar sesión</button>
+      <img class="icon" src="https://cdn.icon-icons.com/icons2/2715/PNG/512/dots_nine_icon_172502.png"></img>
 
-      <a href="https://www.google.com.mx/imghp">Imágenes</a>
+      <a href="https://www.google.com.mx/imghp">Imágenes</a>      
 
       <a href="https://mail.google.com/mail/">Gmail</a>
     </div>
@@ -25,7 +26,7 @@
         width="272"
       />
 
-      <input />
+      <input type="text" class="formulario">
 
       <div class="row">
         <button>Buscar con Google</button>
@@ -33,7 +34,7 @@
         <button>Me siento con suerte</button>
       </div>
 
-      <div>
+      <div class="texto">
         Ofrecido por google en:
 
         <a href="https://www.google.com/setprefs?sig=0_KPNkEfiG_aV_JEvdFPPPG8zQB4U%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwjy9JqT_f32AhWGKUQIHc5xAbEQ2ZgBCA4">English</a>
