Add my Google version

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <footer>
         <div class="country">
-            <a href="">Guatemala</a>
+            <a href="">Guatemala.</a>
         </div>
         <div class="about">
             <div>
