--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         height="92"
         width="272"
       />
-      
+      <div class = "barra">
       <div class="input-group mb-3">
         <button class="btn btn-outline-secondary" type="button" id="button-addon1">
           <span class="material-icons">
@@ -37,9 +37,8 @@
             </span>
         </button>
         <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-      </div>
-    
-
+      </div> 
+    </div>
       <div class="row">
         <button type="button" class="btn btn-light">Buscar con Google</button>
 
