--- a/Luis Vanegas/index.html
+++ b/Luis Vanegas/index.html
@@ -32,14 +32,14 @@
         <div class="main-input-container">
           <span class="search-icon">
           </span>
-          <input class="search__input" type="text">
+          <input class="search__input" id="search-input" type="text">
           <a class="micro-icon" href=""></a>
         </div>
       </section>
     </main>
     <div class="content">
       <div class="row">
-        <button class="button__busqueda">Buscar con Google</button>
+        <button class="button__busqueda" onclick="search()">Buscar con Google</button>
         <button class="button__suerte">Me siento con suerte</button>
       </div>
       <div class="link__idioma">
@@ -49,36 +49,8 @@
           >English</a
         >
       </div>
-      <div class="ubicacion">
-        Nicaragua
-      </div>
-      <footer>
-        <ul class="footer-left">
-          <li>
-            <a href="">Sobre Google</a>
-          </li>
-          <li>
-            <a href="">Publicidad</a>
-          </li>
-          <li>
-            <a href="">Negocios</a>
-          </li>
-          <li>
-            <a href="">Cómo funciona la búsqueda</a>
-          </li>
-        </ul>
-        <ul class="footer-right">
-          <li>
-            <a href="">Privacidad</a>
-          </li>
-          <li>
-            <a href="">Condiciones</a>
-          </li>
-          <li>
-            <a href="">Preferencias</a>
-          </li>
-        </ul>
-      </footer>
     <div>
+      <script src="script.js"></script>
   </body>
 </html>
+
