add index an style class 2

--- a/index.html
+++ b/index.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styled.css">
     <title>Google</title>
-
-    <link rel="stylesheet" href="style.css">
-  </head>
-
-  <body>
-    <div class="nav-bar">
-      <button>Acceder</button>
-
-      <a href="https://www.google.com.mx/imghp">Imágenes</a>
-
-      <a href="https://mail.google.com/mail/">Gmail</a>
+</head>
+<body>
+    <div class="header">
+        <a href="https://mail.google.com/mail/">Gmail</a>
+        <a href="https://www.google.com.gt/imghp">Imagenes</a>
+        <a href=""><img src="./img/icons8_rubik's_cube_60px.png" alt="" width="25px"></a>
+        <button>Acceder</button>
     </div>
-
-    <div class="content">
-      <img
-        class="logo"
-        src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
-        height="92"
-        width="272"
-      />
-
-      <input />
-
-      <div class="row">
-        <button>Buscar con Google</button>
-
-        <button>Me siento con suerte</button>
-      </div>
-
-      <div>
-        Ofrecido por google en:
-
-        <a href="https://www.google.com/setprefs?sig=0_KPNkEfiG_aV_JEvdFPPPG8zQB4U%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwjy9JqT_f32AhWGKUQIHc5xAbEQ2ZgBCA4">English</a>
-      </div>
+    <div class="container">
+        <img src="./img/google-logo-1.png" alt="" height="100px" >
+        <div class="groupInput">
+            <img src="./img/icons8_search_100px.png" alt="" width="25px" class="search">
+            <input type="text" name="" id="">
+            <img src="./img/icons8_microphone_128px.png" alt="" width="25px" class="micro">
+        </div>
+        <div class="groupButton">
+            <button>Buscar con Google</button>
+            <button>Me siento con suerte</button>
+        </div>
+        <p>Ofrecido por Google en: <a href="">English</a></p>
     </div>
-  </body>
+    <footer>
+        <div class="foo">
+            <a href="https://github.com/eldaniell01"><img src="./img/icons8_github_60px.png" alt="" width="30px"></a>
+            <p>by Eldaniell01</p>
+        </div>
+    </footer>
+</body>
 </html>
