--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
 
     <title>Google</title>
 
     <link rel="stylesheet" href="style.css">
-  </head>
+    <script src='script.js'></script>
+</head>
 
-  <body>
+<body>
     <div class="nav-bar">
-      <button>Acceder</button>
+        <button>Acceder</button>
 
-      <a href="https://www.google.com.mx/imghp">Imágenes</a>
+        <a href="https://www.google.com.mx/imghp">Imágenes</a>
 
-      <a href="https://mail.google.com/mail/">Gmail</a>
+        <a href="https://mail.google.com/mail/">Gmail</a>
     </div>
 
     <div class="content">
-      <img
-        class="logo"
-        src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
-        height="92"
-        width="272"
-      />
+        <img class="logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" height="92" width="272" />
 
-      <input />
+        <input />
 
-      <div class="row">
-        <button>Buscar con Google</button>
+        <div class="row">
+            <button>Buscar con Google</button>
 
-        <button>Me siento con suerte</button>
-      </div>
+            <button>Me siento con suerte</button>
+        </div>
 
-      <div>
-        Ofrecido por google en:
+        <div>
+            Ofrecido por google en:
 
-        <a href="https://www.google.com/setprefs?sig=0_KPNkEfiG_aV_JEvdFPPPG8zQB4U%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwjy9JqT_f32AhWGKUQIHc5xAbEQ2ZgBCA4">English</a>
-      </div>
+            <a href="https://www.google.com/setprefs?sig=0_KPNkEfiG_aV_JEvdFPPPG8zQB4U%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwjy9JqT_f32AhWGKUQIHc5xAbEQ2ZgBCA4">English</a>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
