--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="nav-bar">
         <button>Acceder</button>
 
-        <a href="https://www.google.com.mx/imghp">Imágenes</a>
+        <a href="https://www.google.com.mx/imghp">Imagenes</a>
 
         <a href="https://mail.google.com/mail/">Gmail</a>
     </div>
