--- a/index.html
+++ b/index.html
@@ -5,16 +5,40 @@
 
     <title>Google</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <div class="nav-bar">
-      <button>Acceder</button>
+      <button type="button" class="btn btn-primary">Iniciar sesión</button>
 
-      <a href="https://www.google.com.mx/imghp">Imágenes</a>
+      <div class="menu">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-three-dots-vertical"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"
+          />
+        </svg>
+      </div>
+      <a href="https://www.google.com.ar/imghp" class="links">Imágenes</a>
 
-      <a href="https://mail.google.com/mail/">Gmail</a>
+      <a href="https://mail.google.com/mail/" class="links">Gmail</a>
     </div>
 
     <div class="content">
@@ -25,18 +49,38 @@
         width="272"
       />
 
-      <input />
+      <div class="input-group mb-3 input">
+        <button
+          class="btn btn-outline-secondary"
+          type="button"
+          id="button-addon1"
+        >
+          <span class="material-icons"> search </span>
+        </button>
+        <input
+          type="text"
+          class="form-control"
+          placeholder=""
+          aria-label="Example text with button addon"
+          aria-describedby="button-addon1"
+        />
+      </div>
 
       <div class="row">
-        <button>Buscar con Google</button>
+        <button type="button" class="btn btn-light">Buscar con Google</button>
 
-        <button>Me siento con suerte</button>
+        <button type="button" class="btn btn-light">
+          Me siento con suerte
+        </button>
       </div>
 
       <div>
         Ofrecido por google en:
 
-        <a href="https://www.google.com/setprefs?sig=0_KPNkEfiG_aV_JEvdFPPPG8zQB4U%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwjy9JqT_f32AhWGKUQIHc5xAbEQ2ZgBCA4">English</a>
+        <a
+          href="https://www.google.com/setprefs?sig=0_KPNkEfiG_aV_JEvdFPPPG8zQB4U%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwjy9JqT_f32AhWGKUQIHc5xAbEQ2ZgBCA4"
+          >English</a
+        >
       </div>
     </div>
   </body>
