--- a/Jonathan_Anchundia/index.html
+++ b/Jonathan_Anchundia/index.html
@@ -12,9 +12,9 @@
     <div class="nav-bar">
       <button>Acceder</button>
 
-      <a href="https://www.google.com.mx/imghp">Imágenes</a>
+      <a class="link" href="https://www.google.com.mx/imghp">Imágenes</a>
 
-      <a href="https://mail.google.com/mail/">Gmail</a>
+      <a class="link" href="https://mail.google.com/mail/">Gmail</a>
     </div>
 
     <div class="content">
@@ -25,12 +25,12 @@
         width="272"
       />
 
-      <input />
+      <input class="inputText"/>
 
       <div class="row">
-        <button>Buscar con Google</button>
+        <button class="btn">Buscar con Google</button>
 
-        <button>Me siento con suerte</button>
+        <button class="btn">Me siento con suerte</button>
       </div>
 
       <div>
