--- a/Jonathan_Anchundia/index.html
+++ b/Jonathan_Anchundia/index.html
@@ -6,11 +6,13 @@
     <title>Google</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <script src="script.js"></script>
   </head>
 
   <body>
     <div class="nav-bar">
-      <button>Acceder</button>
+      <button class="btnAcceder">Acceder</button>
 
       <a class="link" href="https://www.google.com.mx/imghp">Imágenes</a>
 
