Mi primer pull  request
My google version

--- a/Javier_Hernandez/index.html
+++ b/Javier_Hernandez/index.html
@@ -6,7 +6,8 @@
     <title>Google</title>
 
     <link rel="stylesheet" href="style.css">
-  </head>
+
+     </head>
 
   <body>
     <div class="nav-bar">
@@ -25,7 +26,8 @@
         width="272"
       />
 
-      <input/>
+      <input class="text-bar"/>
+      
 
       <div class="row">
         <button>Buscar con Google</button>
@@ -34,10 +36,11 @@
       </div>
 
       <div>
-        Ofrecido por google en:
+        Ofrecido por Google en:
 
         <a href="https://www.google.com/setprefs?sig=0_KPNkEfiG_aV_JEvdFPPPG8zQB4U%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwjy9JqT_f32AhWGKUQIHc5xAbEQ2ZgBCA4">English</a>
       </div>
+      
     </div>
-  </body>
+      </body>
 </html>
